// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RewardsListScreen should render without data 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RewardsListScreen
    data={
      Array [
        Object {
          "cost": "123",
          "day": "Monday",
          "id": "id",
          "month": "April",
          "onPress": [MockFunction],
          "reward": "string",
          "status": "pending",
        },
      ]
    }
    labels={Array []}
    onItemPress={[MockFunction]}
    onLeftMenuPress={[MockFunction]}
    onLeftTabPress={[MockFunction]}
    onRefresh={[MockFunction]}
    onRightTabPress={[MockFunction]}
    refreshing={false}
    totalCoins={1234}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <TopBar
          coins={1234}
          onPressLeftIcon={[MockFunction]}
        />,
        <Component
          style={
            Object {
              "alignItems": "center",
              "marginTop": 34,
            }
          }
        >
          <RewardTabs
            activeTabIndex={0}
            onLeftTabPress={[MockFunction]}
            onRightTabPress={[MockFunction]}
          />
        </Component>,
        <Component
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <RewardsList
            data={
              Array [
                Object {
                  "cost": "123",
                  "day": "Monday",
                  "id": "id",
                  "month": "April",
                  "onPress": [MockFunction],
                  "reward": "string",
                  "status": "pending",
                },
              ]
            }
            onItemPress={[MockFunction]}
            onRefresh={[MockFunction]}
            refreshing={false}
          />
        </Component>,
        <Component
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgb(255,255,255)",
              "paddingBottom": 30,
              "paddingTop": 50,
            }
          }
        >
          <NavBar
            activeIndex={2}
            areIconsHidden={true}
            colour="darker"
            hasNotification={false}
            labels={Array []}
          />
        </Component>,
      ],
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "coins": 1234,
          "onPressLeftIcon": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <RewardTabs
            activeTabIndex={0}
            onLeftTabPress={[MockFunction]}
            onRightTabPress={[MockFunction]}
          />,
          "style": Object {
            "alignItems": "center",
            "marginTop": 34,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeTabIndex": 0,
            "onLeftTabPress": [MockFunction],
            "onRightTabPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <RewardsList
            data={
              Array [
                Object {
                  "cost": "123",
                  "day": "Monday",
                  "id": "id",
                  "month": "April",
                  "onPress": [MockFunction],
                  "reward": "string",
                  "status": "pending",
                },
              ]
            }
            onItemPress={[MockFunction]}
            onRefresh={[MockFunction]}
            refreshing={false}
          />,
          "style": Object {
            "flex": 1,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "data": Array [
              Object {
                "cost": "123",
                "day": "Monday",
                "id": "id",
                "month": "April",
                "onPress": [MockFunction],
                "reward": "string",
                "status": "pending",
              },
            ],
            "onItemPress": [MockFunction],
            "onRefresh": [MockFunction],
            "refreshing": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NavBar
            activeIndex={2}
            areIconsHidden={true}
            colour="darker"
            hasNotification={false}
            labels={Array []}
          />,
          "style": Object {
            "alignItems": "center",
            "backgroundColor": "rgb(255,255,255)",
            "paddingBottom": 30,
            "paddingTop": 50,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 2,
            "areIconsHidden": true,
            "colour": "darker",
            "hasNotification": false,
            "labels": Array [],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <TopBar
            coins={1234}
            onPressLeftIcon={[MockFunction]}
          />,
          <Component
            style={
              Object {
                "alignItems": "center",
                "marginTop": 34,
              }
            }
          >
            <RewardTabs
              activeTabIndex={0}
              onLeftTabPress={[MockFunction]}
              onRightTabPress={[MockFunction]}
            />
          </Component>,
          <Component
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <RewardsList
              data={
                Array [
                  Object {
                    "cost": "123",
                    "day": "Monday",
                    "id": "id",
                    "month": "April",
                    "onPress": [MockFunction],
                    "reward": "string",
                    "status": "pending",
                  },
                ]
              }
              onItemPress={[MockFunction]}
              onRefresh={[MockFunction]}
              refreshing={false}
            />
          </Component>,
          <Component
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(255,255,255)",
                "paddingBottom": 30,
                "paddingTop": 50,
              }
            }
          >
            <NavBar
              activeIndex={2}
              areIconsHidden={true}
              colour="darker"
              hasNotification={false}
              labels={Array []}
            />
          </Component>,
        ],
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "coins": 1234,
            "onPressLeftIcon": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <RewardTabs
              activeTabIndex={0}
              onLeftTabPress={[MockFunction]}
              onRightTabPress={[MockFunction]}
            />,
            "style": Object {
              "alignItems": "center",
              "marginTop": 34,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeTabIndex": 0,
              "onLeftTabPress": [MockFunction],
              "onRightTabPress": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <RewardsList
              data={
                Array [
                  Object {
                    "cost": "123",
                    "day": "Monday",
                    "id": "id",
                    "month": "April",
                    "onPress": [MockFunction],
                    "reward": "string",
                    "status": "pending",
                  },
                ]
              }
              onItemPress={[MockFunction]}
              onRefresh={[MockFunction]}
              refreshing={false}
            />,
            "style": Object {
              "flex": 1,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "data": Array [
                Object {
                  "cost": "123",
                  "day": "Monday",
                  "id": "id",
                  "month": "April",
                  "onPress": [MockFunction],
                  "reward": "string",
                  "status": "pending",
                },
              ],
              "onItemPress": [MockFunction],
              "onRefresh": [MockFunction],
              "refreshing": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={2}
              areIconsHidden={true}
              colour="darker"
              hasNotification={false}
              labels={Array []}
            />,
            "style": Object {
              "alignItems": "center",
              "backgroundColor": "rgb(255,255,255)",
              "paddingBottom": 30,
              "paddingTop": 50,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 2,
              "areIconsHidden": true,
              "colour": "darker",
              "hasNotification": false,
              "labels": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`RewardsListScreen should render without data 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RewardsListScreen
    data={Array []}
    labels={Array []}
    onItemPress={[MockFunction]}
    onLeftMenuPress={[MockFunction]}
    onLeftTabPress={[MockFunction]}
    onRefresh={[MockFunction]}
    onRightTabPress={[MockFunction]}
    refreshing={false}
    totalCoins={1234}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <TopBar
          coins={1234}
          onPressLeftIcon={[MockFunction]}
        />,
        <Component
          style={
            Object {
              "alignItems": "center",
              "marginTop": 34,
            }
          }
        >
          <RewardTabs
            activeTabIndex={0}
            onLeftTabPress={[MockFunction]}
            onRightTabPress={[MockFunction]}
          />
        </Component>,
        <Component
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <RewardsList
            data={Array []}
            onItemPress={[MockFunction]}
            onRefresh={[MockFunction]}
            refreshing={false}
          />
        </Component>,
        <Component
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgb(255,255,255)",
              "paddingBottom": 30,
              "paddingTop": 50,
            }
          }
        >
          <NavBar
            activeIndex={2}
            areIconsHidden={true}
            colour="darker"
            hasNotification={false}
            labels={Array []}
          />
        </Component>,
      ],
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "coins": 1234,
          "onPressLeftIcon": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <RewardTabs
            activeTabIndex={0}
            onLeftTabPress={[MockFunction]}
            onRightTabPress={[MockFunction]}
          />,
          "style": Object {
            "alignItems": "center",
            "marginTop": 34,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeTabIndex": 0,
            "onLeftTabPress": [MockFunction],
            "onRightTabPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <RewardsList
            data={Array []}
            onItemPress={[MockFunction]}
            onRefresh={[MockFunction]}
            refreshing={false}
          />,
          "style": Object {
            "flex": 1,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "data": Array [],
            "onItemPress": [MockFunction],
            "onRefresh": [MockFunction],
            "refreshing": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NavBar
            activeIndex={2}
            areIconsHidden={true}
            colour="darker"
            hasNotification={false}
            labels={Array []}
          />,
          "style": Object {
            "alignItems": "center",
            "backgroundColor": "rgb(255,255,255)",
            "paddingBottom": 30,
            "paddingTop": 50,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 2,
            "areIconsHidden": true,
            "colour": "darker",
            "hasNotification": false,
            "labels": Array [],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <TopBar
            coins={1234}
            onPressLeftIcon={[MockFunction]}
          />,
          <Component
            style={
              Object {
                "alignItems": "center",
                "marginTop": 34,
              }
            }
          >
            <RewardTabs
              activeTabIndex={0}
              onLeftTabPress={[MockFunction]}
              onRightTabPress={[MockFunction]}
            />
          </Component>,
          <Component
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <RewardsList
              data={Array []}
              onItemPress={[MockFunction]}
              onRefresh={[MockFunction]}
              refreshing={false}
            />
          </Component>,
          <Component
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(255,255,255)",
                "paddingBottom": 30,
                "paddingTop": 50,
              }
            }
          >
            <NavBar
              activeIndex={2}
              areIconsHidden={true}
              colour="darker"
              hasNotification={false}
              labels={Array []}
            />
          </Component>,
        ],
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "coins": 1234,
            "onPressLeftIcon": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <RewardTabs
              activeTabIndex={0}
              onLeftTabPress={[MockFunction]}
              onRightTabPress={[MockFunction]}
            />,
            "style": Object {
              "alignItems": "center",
              "marginTop": 34,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeTabIndex": 0,
              "onLeftTabPress": [MockFunction],
              "onRightTabPress": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <RewardsList
              data={Array []}
              onItemPress={[MockFunction]}
              onRefresh={[MockFunction]}
              refreshing={false}
            />,
            "style": Object {
              "flex": 1,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "data": Array [],
              "onItemPress": [MockFunction],
              "onRefresh": [MockFunction],
              "refreshing": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={2}
              areIconsHidden={true}
              colour="darker"
              hasNotification={false}
              labels={Array []}
            />,
            "style": Object {
              "alignItems": "center",
              "backgroundColor": "rgb(255,255,255)",
              "paddingBottom": 30,
              "paddingTop": 50,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 2,
              "areIconsHidden": true,
              "colour": "darker",
              "hasNotification": false,
              "labels": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
